Improving Maven compatibility